test/integration/page-config/pages/invalid/export-from.js
const ExportFrom = () => <p>hello world</p>
// export { config } from '../../config'

export default ExportFrom
